force-app/main/default/objects/Contact/fields/SPE__c.field-meta.xml
<CustomField>
    <fullName>SPE__c</fullName>
    <label>Previous FY SPE claims</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>