force-app/main/default/objects/Contact/fields/Speaker_Level__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Level__c</fullName>
    <label>Speaker Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>