force-app/main/default/objects/Contact/fields/Specialist_Interest__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Interest__c</fullName>
    <label>Specialist Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>