force-app/main/default/objects/Contact/fields/Strength_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Strength_of_Relationship__c</fullName>
    <label>Strength of Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>