force-app/main/default/objects/Contact/fields/Study_Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Study_Characteristic__c</fullName>
    <label>Study Characteristic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>