force-app/main/default/objects/Contact/fields/Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions__c</fullName>
    <label>Subscriptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>