force-app/main/default/objects/Contact/fields/Suffix_Text__c.field-meta.xml
<CustomField>
    <fullName>Suffix_Text__c</fullName>
    <label>Suffix Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>