force-app/main/default/objects/Contact/fields/Title_VOD__c.field-meta.xml
<CustomField>
    <fullName>Title_VOD__c</fullName>
    <label>Title - VOD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>