force-app/main/default/objects/Contact/fields/TOG_Name__c.field-meta.xml
<CustomField>
    <fullName>TOG_Name__c</fullName>
    <label>TOG Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>