force-app/main/default/objects/Contact/fields/TOG_Number__c.field-meta.xml
<CustomField>
    <fullName>TOG_Number__c</fullName>
    <label>TOG Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>