force-app/main/default/objects/Contact/fields/Type_of_Lab__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Lab__c</fullName>
    <label>Type of Lab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>