force-app/main/default/objects/Contact/fields/Union_ID__c.field-meta.xml
<CustomField>
    <fullName>Union_ID__c</fullName>
    <label>Union ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>