force-app/main/default/objects/Contact/fields/Upload_Details__c.field-meta.xml
<CustomField>
    <fullName>Upload_Details__c</fullName>
    <label>Upload Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>