force-app/main/default/objects/Contact/fields/Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Web_Address__c</fullName>
    <label>Web Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>